# dynamixel_pro_arm_description-release

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  tracks.yaml  urdf.rviz
config/: controller_config.yaml
debian/: changelog  control  gbp.conf  rules
launch/: display.launch  show.launch
meshes/: link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
robots/: dynamixel_pro_arm.urdf.xacro
urdf/: constants.xacro  gazebo.xacro  joint_params.xacro
